panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__pointers__test_funtion_pointer_explicit_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_funtion_pointer_explicit_deref.c"
   (function-definition
      f~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (add (name x~2 `int`) 2))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (declaration x~5 `int` 40)
         (declaration p~6 `ptr<fn(∅: int) -> int>` (addressof (name f~0 `fn(x: int) -> int`)))
         (return
            (call (deref (deref (deref (deref (name p~6 `ptr<fn(∅: int) -> int>`)))))
               (name x~5 `int`))))))

----- stderr -----
