panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__pointers__test_large_ptradd.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/pointers/test_large_ptradd.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_large_ptradd.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~2 `array<array<int; 123>; 123>` ∅)
         (expression (assign (subscript (subscript (name xs~2 `array<array<int; 123>; 123>`) 122) 122) 42))
         (return (subscript (subscript (name xs~2 `array<array<int; 123>; 123>`) 122) 122)))))

----- stderr -----
